--- a/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/Views/MainPage.xaml
+++ b/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/Views/MainPage.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Name="MainPageView"
+             NavigationPage.HasNavigationBar="False"
              x:Class="SmartHotel.Clients.Maintenance.Views.MainPage">
     <ContentPage.Resources>
         <ResourceDictionary>
