--- a/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/Views/MainPage.xaml
+++ b/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/Views/MainPage.xaml
@@ -36,7 +36,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <Grid>
+        <Grid RowSpacing="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
@@ -86,7 +86,7 @@
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="auto"/>
                                     </Grid.ColumnDefinitions>
-                                    <BoxView HeightRequest="50" WidthRequest="50" Grid.RowSpan="2" VerticalOptions="FillAndExpand" BackgroundColor="#46989D" Margin="10,0"/>
+                                    <Image Source="{Binding ImageSource}" HeightRequest="50" WidthRequest="50" Grid.RowSpan="2" VerticalOptions="FillAndExpand" Margin="10,0"/>
                                     <Label Text="{Binding RoomNumber, StringFormat='Room {0}'}" Grid.Column="1" Grid.Row="0" Style="{StaticResource Room}"/>
                                     <Label Text="{Binding TaskName}" Grid.Column="1" Grid.Row="1" Style="{StaticResource Detail}"/>
                                     <StackLayout Orientation="Horizontal" Grid.Column="2" Grid.Row="0" VerticalOptions="Start" IsVisible="{Binding IsCompleted}" HorizontalOptions="End">
@@ -103,6 +103,12 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+            <Frame  HeightRequest="50" WidthRequest="50" CornerRadius="25" Grid.Row="1" HorizontalOptions="End" VerticalOptions="End" Margin="20" BackgroundColor="#46989D" Padding="0">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding RefreshListCommand}"/>
+                </Frame.GestureRecognizers>
+                <Image Source="ic_refresh" Margin="10"/>
+            </Frame>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
