--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/RestaurantView.xaml
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/RestaurantView.xaml
@@ -39,7 +39,7 @@
                                                 <TapGestureRecognizer  Command="{Binding  BindingContext.ShowCatagariesCommand,Source={x:Reference me}}" CommandParameter="{Binding CatagoryName}"/>
                                                 <!--<TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>-->
                                             </StackLayout.GestureRecognizers>
-                                            <Label Text="{Binding CatagoryName}"  Margin="15,0,15,0" FontSize="30" />                                           
+                                            <Label Text="{Binding CatagoryName}"  Margin="15,0,15,0" FontSize="30" LineBreakMode="TailTruncation" />                                           
                                             <StackLayout BindableLayout.ItemsSource="{Binding RestaurantMenuItemList}" 
                                              Padding="0" Margin="15, 2, 15, 0" IsVisible="{Binding IsVisble}" >
                                     <BindableLayout.ItemTemplate>
@@ -56,7 +56,7 @@
                                                             <StackLayout VerticalOptions="CenterAndExpand">
                                                                 <Label   VerticalOptions="CenterAndExpand" FontSize="18" LineBreakMode="TailTruncation"
                                                                Text="{Binding MenuName, Mode=TwoWay}" />
-                                                            <Label  Text="{Binding MenuComment, Mode=TwoWay}" VerticalOptions="Start" FontSize="15" LineBreakMode="TailTruncation"  />
+                                                                <Label  Text="{Binding MenuDescription, Mode=TwoWay}" VerticalOptions="Start" FontSize="15" LineBreakMode="TailTruncation"  />
                                                         </StackLayout>
                                                         <Label Text="{Binding MenuPrice}" HorizontalOptions="EndAndExpand"  VerticalOptions="Center"/>
                                                     </StackLayout>                                                    
