--- a/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/Views/MainPage.xaml
+++ b/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/Views/MainPage.xaml
@@ -40,6 +40,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
             <BoxView BackgroundColor="#203446" HeightRequest="50" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
             <Label Text="REPORTS" TextColor="White" FontSize="Large" VerticalOptions="Center" Margin="20,20"/>
@@ -103,6 +104,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+            <Button Grid.Row="2" Text="Logout" Command="{Binding Clear}"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
