--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/MyRoomView.xaml
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/MyRoomView.xaml
@@ -671,7 +671,7 @@
                                     Animate="True"
                                     Checked="False">
                                     <controls:ToggleButton.GestureRecognizers>
-                                        <TapGestureRecognizer Command="{Binding GoMyRestaurantCommand}"/>
+                                        <TapGestureRecognizer Command="{Binding GoServiceHistoryommand}"/>
                                     </controls:ToggleButton.GestureRecognizers>
                                     <controls:ToggleButton.WidthRequest>
                                         <OnIdiom
